# GenAiAutomationExperiments

./: .gitignore  README.md  bajaklevente.md  bakibence.md  benedekoliver.md  benkoorsolya.md  bocsibarna.md  farkaspeter.md  markusbank.md  piglerandras.md  ÖTLETEK.md  Ötletek.md
BugFixingAnalysis/: .gitignore  README.md  analysis.ipynb  deploy-thesis.sh  pyproject.toml  pytest.ini  requirements.in  requirements.txt
BugFixingAnalysis/llm_bug_analysis/: config.json  corpus copy.json  corpus.json  main.py
BugFixingAnalysis/llm_bug_analysis/core/: analysis.py  ast_utility.py  cache_manager.py  cleanup_manager.py  context_builder.py  context_extraction.py  corpus_builder.py  debug_helper.py  dependency_installer.py  git_operations.py  github_client.py  llm_manager.py  llm_providers.py  logger.py  patch_applicator.py  patch_evaluator.py  patch_generator.py  patch_validator.py  pipeline.py  project_handler.py  results_logger.py  terminal_manager.py  test_executor.py  virtual_environment.py
BugFixingAnalysis/llm_bug_analysis/core/scripts/: persistent_terminal.sh  wrapper.sh
BugFixingAnalysis/llm_bug_analysis/gui/: app.py
BugFixingAnalysis/llm_bug_analysis/prompts/: generate_fix.txt
BugFixingAnalysis/llm_bug_analysis/results/: results.csv  results_fixed.csv
BugFixingAnalysis/tests/: conftest.py
BugFixingAnalysis/tests/core/: test_analysis.py  test_cleanup_manager.py  test_corpus_builder.py  test_logger.py  test_pipeline.py
HallgatoiElorehaladas/: .gitignore  hallgatoi_elorehaladas.py
MailTemplater/: README.md  create_word_template.ps1  general.md  hand_writenREADME.md  mail_merge_automation.ps1  mail_merge_automation.py  mail_merge_vba.bas  test_simple.ps1  test_simple.py  word_mail_merge.py
NeptunAnonymizer/: .gitignore  CHAT.md  CHAT2.md  NeptunAnonymizer.bas  NeptunPelda.xlsx  README.md  TestNeptunCodes.xlsx  add_macro_to_excel.py
Pizza/: .gitignore  CHAT.md  README.md  pizza_ordering_bot.py  requirements.txt
TodoCalendarEntries/: spec.md  todos.xlsx
Work2/: README.md  main.py  requirements.txt  requirements_minimal.txt  send_test_email.py
WorkHours/: .env.example  .gitignore  CHAT.md  (+6 more)
(+33 files in other folders)
