[project]
name = "llm_bug_analysis"
version = "0.1.0"

[tool.mutmut]
# The directory where source code lives
paths_to_mutate = ["llm_bug_analysis/"]

# The directory where tests live
tests_dir = ["tests/"]

# Files or directories to ignore during mutation testing
paths_to_ignore = ["tests/"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]